point package.json repo url at this repo

--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/paulmasson/mathcell"
+    "url": "https://github.com/kperry42/mathcell"
   }
 }
