--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mathcell",
-  "version": "1.9.3-a.2",
+  "name": "@backstrap/mathcell",
+  "version": "1.9.3-a",
   "description": "Interactive 2D and 3D mathematical visualizations in your browser",
   "homepage": "https://paulmasson.github.io/mathcell/docs/",
   "author": "Paul Masson",
